Connected to mongo DB and created a model for sign IN/Sign Up User Info

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -4,7 +4,7 @@
         <a href="">HOME</a>
         <a href="">ABOUT US</a>
         <a href="">CONTACT US</a>
-        <a href="">Sign IN</a>
+        <a href="/users/sign-in">Sign IN</a>
         <a href="">Sign UP</a>
     </div>
 </div>
