--- a/views/users_sign_in.ejs
+++ b/views/users_sign_in.ejs
@@ -8,7 +8,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/css/users_sign_in.css" />
-    <title>Sign in & Sign up Form</title>
+    <title>Sign in/ Sign up</title>
   </head>
   <body>
     <div class="container">
@@ -41,19 +41,23 @@
               </a>
             </div>
           </form>
-          <form action="#" class="sign-up-form">
+          <form action="/users/create-User" class="sign-up-form" method="POST">
             <h2 class="title">Sign up</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" />
+              <input type="text" name="name" placeholder="Name" />
             </div>
             <div class="input-field">
               <i class="fas fa-envelope"></i>
-              <input type="email" placeholder="Email" />
+              <input type="email" name="email" placeholder="Email" />
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" />
+              <input type="password" name="password" placeholder="Password" />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" name="confirm_password" placeholder="Re-Enter Password" />
             </div>
             <input type="submit" class="btn" value="Sign up" />
             <p class="social-text">Or Sign up with social platforms</p>
