--- a/views/users_profile.ejs
+++ b/views/users_profile.ejs
@@ -2,7 +2,7 @@
 
 <p>
     <ul>
-        <li>YASH</li>
-        <li>gyash.21dec</li>
+        <li><%= user.name%></li>
+        <li><%= user.email%></li>
     </ul>
 </p>
