added express session and connect-mongo for storing session data

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,8 +1,11 @@
 
 <div id="navbar">
+    <div id="logo">
+        <img src="/images/e_logo.jpg" alt="LOGO">
+    </div>
     <div id="options">
-        <a href="">HOME</a>
-        <a href="">ABOUT US</a>
+        <a href="/">HOME</a>
+        <a href="/about">ABOUT US</a>
         <a href="">CONTACT US</a>
         <a href="/users/sign-in">Sign IN</a>
         <a href="">Sign UP</a>
