--- a/assets/css/_header.css
+++ b/assets/css/_header.css
@@ -1,19 +1,29 @@
 #navbar{
     display: flex;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
     align-items: center;
-    height: 10vh;
+    height: 12vh;
     width: 100vw;
     background-color: orange;
     border-radius: 5px;
     margin-top: 2px;
     box-shadow: 2px 2px 2px 2px orangered;
 }
-
+#navbar #logo{
+    height: auto;
+    width: 15%;
+    /* margin-left: 2px; */
+    border-radius: 5px;
+}
+#navbar #logo img{
+    height: 12vh;
+    width: 100%;
+    border-radius: 5px;
+}
 #navbar #options{
-    width: 40vw;
+    width: 85%;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
     margin-right: 10px;
 }
 
@@ -25,6 +35,7 @@
     font-weight: 500;
     cursor: pointer;
     transition: border-bottom 0.3s ;
+    margin-left: 35px;
 }
 
 #navbar #options a:hover{
