--- a/views/users_profile.ejs
+++ b/views/users_profile.ejs
@@ -4,5 +4,6 @@
     <ul>
         <li><%= user.name%></li>
         <li><%= user.email%></li>
+        <li><a href="/users/sign-out">Log Out</a></li>
     </ul>
 </p>
